# rust-chatserver

./: .env  .gitignore  README.md  make-db.sh
backend/: Cargo.toml  README.md  make-db.sh
backend/migrations/2022-07-17-111828_create_posts/: up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs
frontend/frontend-chatserver/: README.md  package-lock.json  package.json  vue.config.js
frontend/frontend-chatserver/src/: App.vue  main.js
frontend/frontend-chatserver/src/components/: HelloWorld.vue  NavBar.vue
frontend/frontend-chatserver/src/components/ChatRoom/: ChatContainer.vue  EmptyRoom.vue  MainChatRoom.vue
frontend/frontend-chatserver/src/components/MSG/: ChatMsg.vue  TextInput.vue
frontend/frontend-chatserver/src/router/: index.js
frontend/frontend-chatserver/src/store/: index.js
frontend/frontend-chatserver/src/views/: ChatView.vue  HomeView.vue  LoginView.vue  RegisterView.vue
